[package]
name = "ebpf-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
sha256 = { git = "https://github.com/nanpuyue/sha256.git"}
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
log = "0.4.21"
